--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a {
     left: 50%;
   }
 
-div {
+.testbox div {
     border: 10px black; /* behaving weirdly */
     background-color: whitesmoke;
     margin: 20px
